[gd_scene load_steps=64 format=2]

[ext_resource path="res://Character/Ranger_bot.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload4.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload5.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload6.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload7.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload8.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload9.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload10.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload11.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_ranger_static.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die1.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die2.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die3.png" type="Texture" id=16]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die4.png" type="Texture" id=17]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die5.png" type="Texture" id=18]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die6.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die7.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die8.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Spectral_rang/die/Spectral_ranger_die9.png" type="Texture" id=22]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_corps1.png" type="Texture" id=23]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=24]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk1.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk2.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk3.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk4.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk5.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk6.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk7.png" type="Texture" id=32]
[ext_resource path="res://Graphics/Spectral_rang/walk/Spectral_ranger_walk8.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_ranger_legs_static.png" type="Texture" id=34]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms2.png" type="Texture" id=35]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms3.png" type="Texture" id=36]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms4.png" type="Texture" id=37]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms5.png" type="Texture" id=38]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms6.png" type="Texture" id=39]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms7.png" type="Texture" id=40]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms8.png" type="Texture" id=41]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms9.png" type="Texture" id=42]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms10.png" type="Texture" id=43]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms11.png" type="Texture" id=44]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms12.png" type="Texture" id=45]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms13.png" type="Texture" id=46]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms14.png" type="Texture" id=47]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms15.png" type="Texture" id=48]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms16.png" type="Texture" id=49]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie_divine_shield.png" type="Texture" id=50]
[ext_resource path="res://Graphics/interface/bar_vie/vie_divine_shield.png" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "reload",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "die",
"speed": 13.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "static",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "divine_shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 271, 176 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "mouv",
"speed": 9.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": false,
"name": "static",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 29.0

[sub_resource type="Animation" id=9]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Ranger_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ranger_spr/Ranger_legs:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ranger_arm:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ranger_spr:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "mouv"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Ranger_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "static" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ranger_spr/Ranger_legs:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "mouv" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ranger_arm:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}

[sub_resource type="Animation" id=11]
resource_name = "reload"
length = 1.3
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Ranger_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "reload" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ranger_arm:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ranger_spr:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6, 0.72, 0.84, 0.96, 1.08, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=12]
resource_name = "shoot"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Ranger_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ranger_arm:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ranger_arm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.54, 0.56, 0.58, 0.6, 0.62, 0.64, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.49 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}

[node name="Ranger" type="RigidBody2D" groups=[
"Character_red",
"Character_sprite",
"Ranger",
]]
collision_layer = 2
collision_mask = 142
mode = 2
custom_integrator = true
script = ExtResource( 1 )

[node name="Ranger_spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die"
frame = 8
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="barre_vie" type="AnimatedSprite" parent="Ranger_spr"]
position = Vector2( -4, -21 )
frames = SubResource( 2 )

[node name="vie" type="AnimatedSprite" parent="Ranger_spr/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 3 )
centered = false

[node name="divine_shield" type="AnimatedSprite" parent="Ranger_spr/barre_vie"]
position = Vector2( -6, -9 )
frames = SubResource( 4 )
animation = "off"
centered = false

[node name="shoot_check" type="Area2D" parent="Ranger_spr"]
collision_layer = 0
collision_mask = 2180

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ranger_spr/shoot_check"]
position = Vector2( 271, 0 )
scale = Vector2( 1, 2.2 )
shape = SubResource( 5 )

[node name="Ranger_legs" type="AnimatedSprite" parent="Ranger_spr"]
frames = SubResource( 6 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="Ranger_arm" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="Pos_L" type="Position2D" parent="."]
position = Vector2( 0, -11 )

[node name="Pos_R" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="hit_box" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0.5 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 9 )
anims/mouv = SubResource( 10 )
anims/reload = SubResource( 11 )
anims/shoot = SubResource( 12 )
[connection signal="body_entered" from="Ranger_spr/shoot_check" to="." method="_on_shoot_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
